--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.864.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "canvas": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "uuid": "^11.1.0"
   }
 }
