--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "canvas": "^3.1.2",
     "cors": "^2.8.5",
+    "csv-stringify": "^6.6.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "uuid": "^11.1.0"
