--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "canvas": "^3.1.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-stringify": "^6.6.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -22,6 +24,7 @@
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+    "puppeteer": "^24.16.2",
     "uuid": "^11.1.0"
   }
 }
