--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "csv-stringify": "^6.6.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "puppeteer": "^24.17.0",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
   }
 }
