--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "puppeteer": "^24.17.0",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
