--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.12.2",
     "canvas": "^3.1.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
