--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "canvas": "^3.1.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csv-stringify": "^6.6.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
     "html-pdf": "^3.0.1",
